data/derived/comb/progs/unify/prog1119.ml.out
Characters 46-60:
  let fixpoint (f,b) = wwhile(let xx = x*x*x in (xx, xx < 100), b);;
                                                ^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
